<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_photo_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/photo_details_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photoDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iso"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_iso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shutterSpeed"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_shutter_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/focal_length"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_focal_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fieldMarginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aperture"
                android:textStyle="normal|bold"
                android:width="@dimen/labelWidth"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/photo_aperture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:paddingEnd="@dimen/fieldPaddingEnd"
                android:paddingStart="@dimen/fieldPaddingStart" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
